--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UTP CGPA Calculator</title>
+    <title>CGPA Calculator</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>UTP CGPA Calculator</h1>
+        <h1>CGPA Calculator</h1>
         <table id="courses">
             <tr>
                 <th>Course Name</th>
                 <th>Credit Hours</th>
                 <th>Grade</th>
-                <th>Actions</th>
             </tr>
             <tr>
                 <td><input type="text" placeholder="Course Name"></td>
@@ -32,7 +31,6 @@
                         <option value="0.0">F (0.0)</option>
                     </select>
                 </td>
-                <td><button class="remove-btn" onclick="removeRow(this)">Remove</button></td>
             </tr>
         </table>
         <button onclick="addRow()">Add Course</button>
@@ -41,14 +39,9 @@
     </div>
 
     <div class="sidebar">
-        <h2>Grade Reference</h2>
+        <h3>Grade Reference</h3>
         <table>
-            <tr>
-                <th>Grade</th>
-                <th>Meaning</th>
-                <th>Grade Points</th>
-                <th>Range</th>
-            </tr>
+            <tr><th>Grade</th><th>Meaning</th><th>Grade Points</th><th>Range</th></tr>
             <tr><td>A</td><td>High Distinction</td><td>4.00</td><td>85.0 – 100</td></tr>
             <tr><td>A-</td><td>Distinction</td><td>3.75</td><td>80.0 – 84.9</td></tr>
             <tr><td>B+</td><td>High Credit</td><td>3.50</td><td>75.0 – 79.9</td></tr>
